[package]
name = "aoc"
version = "0.2.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>", "Steve Thorne"]
edition = "2021"
default-run = "aoc"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
md5 = "0.7.0"
concat-string = "1.0.1"
